[package]
name = "shawna"
version = "0.1.0"
authors = ["Rafael Froeschlin Filho <rafael.froe.filho@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-shawna.json"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.5.2"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"